@@ -36,6 +36,8 @@ requires:
   Getopt::Std: 0
   List::Util: 1.33
   MARC::File::XML: 1.0.4
+  MARC::Leader: 0
+  MARC::Leader::Utils: 0
   Readonly: 0
   Unicode::UTF8: 0
   perl: 5.6.0
