@@ -24,6 +24,8 @@ requires 'English' => 0;
 requires 'Error::Pure' => 0;
 requires 'Getopt::Std' => 0;
 requires 'List::Util' => 1.33;
+requires 'MARC::Leader' => 0;
+requires 'MARC::Leader::Utils' => 0;
 requires 'MARC::File::XML' => '1.0.4';
 requires 'Readonly' => 0;
 requires 'Unicode::UTF8' => 0;
